--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "csurf": "^1.10.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
